<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_name"/>

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"

        android:text="@string/item_quantity"/>

    <TextView
        android:id="@+id/item_current_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_current_price"/>

    <TextView
        android:id="@+id/item_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_currency"/>

    <TextView
        android:id="@+id/item_last_price_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_last_price_update"/>

    <TextView
        android:id="@+id/item_exchange_ratio_to_usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_exchange_ratio_to_usd"/>

    <TextView
        android:id="@+id/item_dividends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_dividends"/>

    <TextView
        android:id="@+id/item_future_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_future_price"/>

    <TextView
        android:id="@+id/item_yield_to_maturity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/item_yield_to_maturity"/>

</LinearLayout>
