<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectAssetType.SelectAssetTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/btn_create_stock"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:text="@string/create_stock"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_create_bond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:text="@string/create_bond"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_create_cash"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/create_cash" />

    </LinearLayout>

</FrameLayout>