<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.home.HomeFragment">

    <Button
        android:id="@+id/btnGoToPortfolio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_massage" />

    <Button
        android:id="@+id/btnGoToSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoToPortfolio" />

    <Button
        android:id="@+id/btnGoToAssetList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/asset_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoToSettings" />

    <Button
        android:id="@+id/btnGoToSelectAssetType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_new_asset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoToAssetList" />

    <TextView
        android:id="@+id/tv_massage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/this_is_your_partfolio"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
